-山童的木箱现在可以将道具和饰品拆成基础掉落，而不是销毁道具。

10.3.2-2022.6.15
-Added synergy for Soul of Seija and Rune Sword.
-添加了正邪的魂石与符文佩剑的组合。
-Rune Sword now no longer inserts the rune immediately when used with Car Battery, it will spawn 2 runes instead.
-符文佩剑现在在有车载电池的情况下不再会立即镶嵌获得的符文，改为生成两个符文。
-Canceled Rune Sword's Lunatic mode nerf.
-取消了符文佩剑的疯狂模式削弱。

10.3.3-2022.6.15
-Fixed the formula of tears up.
-修正了射速上升的公式。

10.3.4-2022.6.15
-Soul of Seija now has synergy with D Flip and itself.
-正邪的魂石现在与镜像骰子及其自身具有配合。
-Changed the voice of Soul of Seija.
-修改了正邪的魂石的语音。

10.3.5-2022.6.18
-Fixed an issue that Seija's Twisted Pair will reduce damage twice.
-修复了正邪的作孽双子会降低伤害2次的BUG。
-Fixed an issue that Seija's Pyromaniac doesn't work properly.
-修复了正邪的纵火狂工作不正常的BUG。

10.3.6-2022.6.19
-Broken Amulet now has synergies with Ludovico Technique.
-破碎的护身符现在与鲁多维科科技具有联动效果。
-Fixed an issue that using cards or pills during net-coop with different announcer settings will make game desynced.
-修复了联机玩家具有不同卡牌语音设置时，使用卡牌或药丸会导致游戏不同步的BUG。

10.3.7-2022.6.19
-Fixed an issue that Seija's Brimstone + Technology will not be nerfed.
-修复了正邪的硫磺火+科技不会被削弱的BUG。

10.3.8-2022.6.19
-Seija's Razor Blade now gives player √(UseTime + 1) damage multiplier instead of 2 ^ UseTime.
-正邪的剃刀片现在会给予角色√(使用次数 + 1)的伤害倍率，而不是2^使用次数。

10.3.9-2022.6.20
-Fixed an issue that Seija's Clicker will not spawn quality 4 item.
-修复了正邪的遥控器不会生成品质4道具的BUG。

10.4.0-2022.6.22
-Doremy now has 1230 shield, instead a huge damage limit.
-哆来咪现在有1230点的护甲，而不再限制伤害。
-Seija's Bum Friend now has only 50% chance to spawn collectibles.
-正邪的乞丐朋友现在只有50%的概率生成道具。

10.4.1-2022.6.26
-Seija's Pageant Boy's coin convert chance has been halved.
-正邪的盛装男孩的钱币转化几率减半。

10.4.2-2022.6.30
-Wild Fury is now quality 4, and will be nerfed by Seija.
-野性狂暴现在品质为4，并且会被正邪削弱。
-Fixed an issue that Reverie Music will spawn music box when It lives in the Void is defeated.
-修复了幻想曲乐谱会在虚空层击杀“它还活着”后变为音乐盒的BUG。


-Changed the quote of Zombie Infestation into "Biohazard" from "Resident Evil".
-将僵尸感染的描述从“内在邪恶”改为“生化危机”。