@@ -294,12 +294,15 @@ local terminus8 = Font();
 terminus8:Load("font/terminus8.fnt");
 local pftempesta7 = Font();
 pftempesta7:Load("font/pftempestasevencondensed.fnt");
+local mplus_12b = Font();
+mplus_12b:Load("font/mplus_12b.fnt");
 THI.Fonts = {
     Teammeat10 = teammeat10,
     TeammeatExtended10 = teammeatExtended10,
     Lanapixel = lanapixel,
     Terminus8 = terminus8,
     PFTempesta7 = pftempesta7,
+    MPlus12b = mplus_12b
 }
 THI.Music = {
     UFO = Isaac.GetMusicIdByName("UFO"),
@@ -719,7 +722,7 @@ do
     THI.ShowTranslationText = true;
     THI.Translations = {};
     THI.IncludedLanguages = {
-        "en", "zh"
+        "en", "zh", "jp"
     }
     THI.Translations.en = Require("translations/en");
     for _, language in pairs(THI.IncludedLanguages) do
@@ -763,6 +766,20 @@ do
         end
         -- English Fallback.
         return GetLanguageText(category, key, "en");
+    end
+    function THI.GetFont(key, lang)
+        local lang = lang or language;
+        local Translations = THI.Translations;
+        local translation = Translations[lang];
+        if (translation) then
+            return translation.Fonts[key];
+        end
+
+        local en = Translations.en;
+        if (en) then
+            return en.Fonts[key];
+        end        
+        return THI.Fonts.Lanapixel;
     end
 
     local BirthrightNames = {
