@@ -149,7 +149,8 @@ do
         PortraitOffset = Vector(0, -30),
         NamePaths = {
             en = "gfx/reverie/ui/boss/bossname_584.0_pyroplume.png",
-            zh = "gfx/reverie/ui/boss/bossname_584.0_pyroplume_zh.png"
+            zh = "gfx/reverie/ui/boss/bossname_584.0_pyroplume_zh.png",
+            jp = "gfx/reverie/ui/boss/bossname_584.0_pyroplume_jp.png"
         }
     }
     Bosses:SetBossConfig("reverie:pyroplume", bossConfig, roomConfig);
