@@ -844,7 +844,8 @@
 标签：攻击性、可召唤
 道具池：宝箱房、贪婪宝箱房、究极隐藏房
 * 在角色较远距离外生成一个火焰环绕物，每7帧造成10点接触伤害。
-* 穿过任何火焰的眼泪都会变为橙色火焰，接触伤害为眼泪伤害的4倍。
+* 穿过任何火焰的眼泪都会变为火焰，接触伤害等同于眼泪伤害。
+    * 火焰属于蓝色火焰，但外观为橙色。
 * 角色不会受到火焰伤害。
 
 燕的子安贝 Swallow's Shell 
